# evo-tom

./: LICENSE  README.md  Setup.hs  cabal.project  evo-tom.cabal  evo.hs  results.proto  stack.yaml
experiment1/: analysis.py
experiment1/data/: sona-22649.json  sona-23701.json  sona-23807.json  sona-24934.json  sona-25250.json  sona-26253.json  sona-27932.json  sona-28672.json  sona-28831.json  sona-29078.json  sona-29942.json  sona-30410.json  sona-30516.json  sona-33305.json  sona-33924.json  sona-33962.json  sona-34563.json  sona-34685.json  sona-34981.json
experiment2/: .gitignore  analysis.py  model.stan
experiment2/data/: sona-18563.json  sona-19167.json  sona-22627.json  sona-22717.json  sona-23222.json  sona-23230.json  sona-23318.json  sona-23529.json  sona-23569.json  sona-23868.json  sona-24270.json  sona-24280.json  sona-24323.json  sona-24382.json  sona-24840.json  sona-25041.json  sona-25445.json  sona-25477.json  sona-25555.json  sona-25718.json  sona-25801.json  sona-25974.json  sona-26675.json  sona-26805.json  sona-26881.json  sona-26928.json  sona-26947.json  sona-27020.json  sona-27615.json  sona-28203.json  sona-28216.json  sona-28739.json  sona-28755.json  sona-28957.json  sona-28988.json  sona-29445.json  sona-29513.json  sona-29730.json  sona-29930.json  (+33 more)
output/: evo-os-pf.txt  evo-os-ps.txt  evo-ov-pf.txt  mean-ov-pf.txt  mean-ov-ps.txt  mean-ov-pv.txt  sem-os-ps.txt  sem-ov-ps.txt  sem-ov-pv.txt
simulation/: .gitignore  Lib.hs  analysis.hs  cabal.project.freeze  evo-tom.cabal  evo.hs  hie.yaml  package.yaml  tournament.hs
(+18 files in other folders)
